--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,15 +16,16 @@
 </div>
 
 <ul id="article-list" class="article-list"></ul>
-
 <template id="mytemplate">
     <li>
         <div class="article">
             <div class="title"></div>
             <div class="description"><img class="article-image" alt="" src=""></div>
             <div class="article-info">
-                <div class="author"></div> <span> | </span>
-                <div class="date"></div> <span> | </span>
+                <div class="author"></div>
+                <span> | </span>
+                <div class="date"></div>
+                <span> | </span>
                 <a class="source-link">źródło</a>
             </div>
         </div>
